@@ -141,7 +141,8 @@ class TradesToXLSFile(object):
 
     def gen_report_file(self,dt_from,dt_to,file_name):
 
-        consign_trades = Trade.objects.filter(pay_time__gte=dt_from,pay_time__lte=dt_to)
+        consign_trades = Trade.objects.filter(pay_time__gte=dt_from,
+                                              pay_time__lte=dt_to)
         seller_list = User.effect_users.all()
         for seller in seller_list:
 
@@ -153,7 +154,9 @@ class TradesToXLSFile(object):
             seller_finish_trades = consign_trades.filter(
                 user__visitor_id=seller_id,status__in=pcfg.ORDER_SUCCESS_STATUS)
 
-            self.write_trades_to_sheet(sheet,seller_id,seller_finish_trades,TITLE_FIELDS['TRADE_FINISH_MSG'])
+            self.write_trades_to_sheet(sheet,seller_id,
+                                       seller_finish_trades,
+                                       TITLE_FIELDS['TRADE_FINISH_MSG'])
 
             seller_purchase_trades = PurchaseOrder.objects.filter(
                 user__visitor_id=seller_id,pay_time__gte=dt_from
@@ -177,7 +180,8 @@ class TradesToXLSFile(object):
                 user__visitor_id=seller_id,status=pcfg.ORDER_REFUND_STATUS)
             
             self.cur_row += 1
-            self.write_trades_to_sheet(sheet,seller_id,seller_unfinish_trades,TITLE_FIELDS['TRADE_POST_UNFINISH_MSG'])
+            self.write_trades_to_sheet(sheet,seller_id,seller_unfinish_trades,
+                                       TITLE_FIELDS['TRADE_POST_UNFINISH_MSG'])
 
             self.write_final_account(sheet,trade_sum_row,refund_sum_row,seller_nick)
 
