@@ -1,3 +1,9 @@
+######### 2014-7-28 ##########
+alter table shop_refunds_refund drop index refund_id;
+alter table shop_refunds_refund change refund_id refund_id varchar(32) NOT NULL;
+alter table shop_refunds_refund change tid tid varchar(32) NOT NULL;
+
+create unique index uqk_refund_id_trade_id on shop_refunds_refund(refund_id,tid);
 ######### 2014-7-25 ##########
 alter table shop_weixin_order add column receiver_zone varchar(24) NOT NULL;
 ######### 2014-7-24 ###### zifei ####
